k8s/yjs-in-erlang-websocket.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: yjs-in-erlang-websocket
spec:
  serviceName: "yjs-in-erlang-websocket"
  replicas: 3 # 初期レプリカ数
  selector:
    matchLabels:
      app: yjs-in-erlang-websocket
  template:
    metadata:
      labels:
        app: yjs-in-erlang-websocket
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: yjs-in-erlang-websocket
              topologyKey: "kubernetes.io/hostname" # 各レプリカを異なるノードにスケジュール
      containers:
        - name: yjs-in-erlang-websocket
          image: asia-east2-docker.pkg.dev/lucky-antler-449601-f2/yjs-in-erlang/yjs_in_erlang_websocket:e1a7705
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /mnt
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi # 各レプリカのストレージサイズ
        storageClassName: "standard" # 必要に応じてストレージクラスを変更
---
apiVersion: v1
kind: Service
metadata:
  name: yjs-in-erlang-websocket
  labels:
    app: yjs-in-erlang-websocket
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: yjs-in-erlang-websocket
---
apiVersion: v1
kind: Service
metadata:
  name: yjs-in-erlang-websocket-service
  labels:
    app: yjs-in-erlang-websocket
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: yjs-in-erlang-websocket
